# cpp_coding

./: .gitignore  test  test.cpp
code_kata/fizz_buzz_device/: CMakeLists.txt  conanfile.py
code_kata/fizz_buzz_device/test_package/: conanfile.py
cross_compile_to_tda4/: CMakeLists.txt  conanfile.py  git config --global user.email "akshay.s  run_camera.py
cross_compile_to_tda4/apps/: CMakeLists.txt
cross_compile_to_tda4/apps/export_handle_across/: CMakeLists.txt
cross_compile_to_tda4/apps/export_handle_across/receiver_app/: CMakeLists.txt
cross_compile_to_tda4/apps/export_handle_across/sender_app/: CMakeLists.txt  main.cpp
cross_compile_to_tda4/apps/first_test_app/: CMakeLists.txt  main.cpp
cross_compile_to_tda4/apps/viss_with_imx390/: CMakeLists.txt  main.cpp
cross_compile_to_tda4/common/: CMakeLists.txt
cross_compile_to_tda4/src/: main.cpp
cross_compile_to_tda4/test_package/: conanfile.py
